<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoseFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.45" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.56" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.67" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.79" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/img_des"
            android:src="@drawable/ic_baseline_sentiment_very_dissatisfied_24"
            app:layout_constraintBottom_toTopOf="@+id/guideline21"
            app:layout_constraintEnd_toStartOf="@+id/guideline20"
            app:layout_constraintStart_toStartOf="@+id/guideline18"
            app:layout_constraintTop_toTopOf="@+id/guideline19" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lost_msg"
            android:textSize="@dimen/mid_font"
            app:layout_constraintBottom_toTopOf="@+id/guideline22"
            app:layout_constraintEnd_toStartOf="@+id/guideline20"
            app:layout_constraintStart_toStartOf="@+id/guideline18"
            app:layout_constraintTop_toTopOf="@+id/guideline22" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lose_score"
            android:textSize="@dimen/mid_font"
            app:layout_constraintBottom_toTopOf="@+id/guideline23"
            app:layout_constraintEnd_toStartOf="@+id/guideline20"
            app:layout_constraintStart_toStartOf="@+id/guideline18"
            app:layout_constraintTop_toTopOf="@+id/guideline23" />

        <Button
            android:id="@+id/button15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_back_to_title"
            app:layout_constraintBottom_toTopOf="@+id/guideline24"
            app:layout_constraintEnd_toStartOf="@+id/guideline20"
            app:layout_constraintStart_toStartOf="@+id/guideline18"
            app:layout_constraintTop_toTopOf="@+id/guideline24" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>