<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WinFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline28"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline26"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline27"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.45" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline29"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.56" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.68" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline31"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.79" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/ic_baseline_sentiment_satisfied_alt_24"
            app:layout_constraintBottom_toTopOf="@+id/guideline27"
            app:layout_constraintEnd_toStartOf="@+id/guideline28"
            app:layout_constraintStart_toStartOf="@+id/guideline25"
            app:layout_constraintTop_toTopOf="@+id/guideline26" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/win_msg"
            android:textSize="@dimen/huge_font"
            app:layout_constraintBottom_toTopOf="@+id/guideline29"
            app:layout_constraintEnd_toStartOf="@+id/guideline28"
            app:layout_constraintStart_toStartOf="@+id/guideline25"
            app:layout_constraintTop_toTopOf="@+id/guideline29" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/win_score"
            android:textSize="@dimen/mid_font"
            app:layout_constraintBottom_toTopOf="@+id/guideline30"
            app:layout_constraintEnd_toStartOf="@+id/guideline28"
            app:layout_constraintStart_toStartOf="@+id/guideline25"
            app:layout_constraintTop_toTopOf="@+id/guideline30" />

        <Button
            android:id="@+id/button16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_back_to_title"
            app:layout_constraintBottom_toTopOf="@+id/guideline31"
            app:layout_constraintEnd_toStartOf="@+id/guideline28"
            app:layout_constraintStart_toStartOf="@+id/guideline25"
            app:layout_constraintTop_toTopOf="@+id/guideline31" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>